--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.241",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.9",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.2.1",
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1"
   }
 }
