--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "start": "NODE_ENV=production node dist/server.js",
     "clean": "rm -rf dist",
     "lint": "eslint --ext .ts src",
-    "lint:fix": "eslint --ext .ts src --fix"
+    "lint:fix": "eslint --ext .ts src --fix",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +20,10 @@
   "devDependencies": {
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.241",
+    "@swc/jest": "^0.2.22",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.8",
     "@types/node": "^18.7.9",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "chokidar": "^3.5.3",
@@ -30,8 +33,10 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.2.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
