--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.8",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.9",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "chokidar": "^3.5.3",
@@ -42,6 +43,8 @@
   "dependencies": {
     "@prisma/client": "^4.2.1",
     "bcrypt": "^5.0.1",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
